Testing in github

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: CanIWebView
 repository: WebView-CG/Compatibility-Data-Project
-url: https://caniwebview.com
+url: https://espinr.github.io/Compatibility-Data-Project
 
 collections:
   posts:
